[project]
name = "pyBDL"
version = "0.0.1"
description = "A Pythonic interface for BDL (Bank Danych Lokalnych) datasets."
readme = "README.md"
authors = [{name = "Mikołaj Kaczmarek", email = "12432719+AN0DA@users.noreply.github.com"}]
license = {text = "MIT"}

requires-python = ">=3.11"
dependencies = [
    "dataclasses>=0.8",
    "matplotlib>=3.10.3",
    "numpy>=2.3.0",
    "pandas>=2.3.0",
    "requests>=2.32.4",
    "requests-cache>=1.2.1",
    "seaborn>=0.13.2",
]

[dependency-groups]
dev = [
    "bandit>=1.8.3",
    "mypy>=1.15.0",
    "pytest>=8.3.5",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.9.10",
    "sphinx>=8.2.3",
    "types-requests>=2.32.0.20250306",
]

[tool.ruff]
line-length = 120
output-format = "full"

exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]
target-version = "py311"

[tool.ruff.lint]
select = [
    "A",
    "B",
    "C4",
    "E",
    "F",
    "I001",
    "SIM",
    "T201",
    "UP",
]
ignore = ["E501", "B008"]
unfixable = ["B"]


[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
skip-magic-trailing-comma = false


[tool.pytest]
python_files = "tests.py test_*.py *_tests.py"
norecursedirs = ".git .env venv"


[tool.mypy]
python_version = "3.11"
show_error_codes = true
strict = true
disallow_untyped_calls = false
disallow_any_generics = false
warn_return_any = false
ignore_missing_imports = true
disable_error_code = "abstract"



[tool.bandit]
exclude_dirs = ['tests/*']


[tool.coverage.paths]
source = ["pybdl/"]

[tool.coverage.run]
source = ["pybdl/"]
omit = [
    "**/__init__.py",
]
relative_files = true

[tool.coverage.report]
show_missing = true


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
